# OpenCV_opdracht

openCV_opdrachtV2/: .cproject  .project  CMakeLists.txt  config.h.in  github_link.txt  test.txt
openCV_opdrachtV2/src/: Colours.h  Parser.cpp  Parser.h  ShapeDetection.cpp  ShapeDetection.h  config.h  openCV_opdrachtV2.cpp
